[package]
name = "dotcomfy"
version = "0.1.0"
edition = "2021"
license = "Beerware"
authors = ["Ethan Harmon", "Stephen Reaves"]
repository = "https://github.com/neckbeards-r-us/dotcomfy"

# I think clap pulls this as the `about` section in the command, but I'm not
# sure.
description = "A simple tool for managing your dotfiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = { version = ">=0.18.3", default-features = false, features = ["https"] }

[build-dependencies]
clap_mangen = "0.2.20"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true      #"symbols"
lto = "thin"
codegen-units = 1 # maximize size-reduction optimizations at the expense of build time
